Run the ABI pre-flight through the adb the install uses
Summary:
`AndroidInstallerManager` had its own copy of device discovery: a bare `Runtime.getRuntime().exec("adb devices")`, its own parsing, its own emulator/real-device filtering, and its own `getDeviceAbis` -- the same method name `AdbHelper` already has. The two talked to different adbs.

The copy used whatever `adb` was on `PATH`, ignoring the configured executable and server port. Both of its failure paths swallowed into an empty set, and an empty set is read as "could not determine the ABI, carry on". So whenever the configured adb was not the one on `PATH`, the incompatible-native-libs pre-flight did not fail -- it silently did not run, and the problem surfaced at the end of the build or on the device instead.

Use the devices the install already resolved. The cpu filters and the devices turn up in either order, so the check is offered on every arrival and answers for itself, doing nothing until both are there -- rather than being gated on the two artifact names that happen to supply them.

Offering it every arrival costs nothing because neither input is re-derived. The cpu filters are parsed into their ABI set once, in the same switch arm that records every other artifact, so the check reads a field rather than the file. Device ABIs come from `ro.` properties, which this diff now stacks above the cache that holds them. A repeated offer is a set intersection.

Unknown ABIs still do not block an install; that policy is unchanged, but now it says so in the log rather than looking like a pass. Every targeted device must be able to run the apk: one that cannot fails the install, rather than the union of devices being consulted.

Reviewed By: siaojiecai

Differential Revision: D116078377

fbshipit-source-id: aaf9784f4cdee1cfa8495d38a46a83a0d278296e